--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build:functions": "netlify-lambda build functions",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "prod": "npm run build; npm run build:lambda"
   },
   "eslintConfig": {
     "extends": "react-app"
