--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.1.4",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "http-proxy-middleware": "^0.19.1",
+    "jest-fetch-mock": "^2.1.2",
     "netlify-lambda": "^1.4.13",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
