--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rss-parser": "^3.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:**",
+    "start:app": "react-scripts start",
     "start:lambda": "netlify-lambda serve src/functions",
     "build": "run-p build:**",
     "build:app": "react-scripts build",
